[package]
name = "http2-multiplexing"
version = "0.1.0"
authors = ["Sergey Veselkov <veselkovsd@yandex.ru>"]
edition = "2021"

[dependencies]
anyhow = "1.0.81"
arrayvec = "0.7.4"
bincode = "1.3.3"
bytes = "1.6.0"
clap = { version = "4", features = ["derive"] }
fastrand = "2.0.2"
h2 = "0.4.4"
http = "1.1.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal", "net", "macros", "time", "sync"] }
tokio-util = { version = "0.7.10" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
